--- a/client/style/main.less
+++ b/client/style/main.less
@@ -147,6 +147,15 @@ button, input[type="submit"], .btn {
         }
     }
 
+    .service-message {
+        display: block;
+        flex-direction: row;
+        margin-top: 2px;
+        margin-bottom: 2px;
+        font-size: x-small;
+        margin-left: 128px;
+    }
+
     .message-box {
         display: flex;
         flex-direction: row;
