--- a/client/style/main.css
+++ b/client/style/main.css
@@ -66,6 +66,7 @@ input[type="submit"]:not([disabled]):active,
 }
 .box > .upper-box {
   flex-grow: 0;
+  flex-shrink: 0;
   order: 1;
   background-color: rgba(255, 217, 217, 0.2);
   font-size: small;
@@ -75,15 +76,18 @@ input[type="submit"]:not([disabled]):active,
 }
 .box > .middle-box {
   flex-grow: 1;
+  flex-shrink: 1;
   order: 2;
   background-color: rgba(255, 217, 217, 0.1);
   padding-top: 8px;
   padding-left: 8px;
   padding-right: 8px;
   border-radius: 0;
+  overflow-y: auto;
 }
 .box > .lower-box {
   flex-grow: 0;
+  flex-shrink: 0;
   order: 3;
   background-color: rgba(255, 217, 217, 0.1);
   padding: 8px;
@@ -99,6 +103,7 @@ input[type="submit"]:not([disabled]):active,
   grid-column-gap: 8px;
   justify-content: stretch;
   align-items: stretch;
+  grid-template-rows: calc(100vh - 16px);
 }
 .lobby-layout .left {
   grid-row: 1;
