--- a/client/style/main.less
+++ b/client/style/main.less
@@ -69,6 +69,7 @@ button, input[type="submit"], .btn {
 
     > .upper-box {
         flex-grow: 0;
+        flex-shrink: 0;
         order: 1;
         background-color: fade(@fg, 20%);
         font-size: small;
@@ -79,16 +80,19 @@ button, input[type="submit"], .btn {
 
     > .middle-box {
         flex-grow: 1;
+        flex-shrink: 1;
         order: 2;
         background-color: fade(@fg, 10%);
         padding-top: 8px;
         padding-left: 8px;
         padding-right: 8px;
         border-radius: 0;
+        overflow-y: auto;
     }
 
     > .lower-box {
         flex-grow: 0;
+        flex-shrink: 0;
         order: 3;
         background-color: fade(@fg, 10%);
         padding: 8px;
@@ -107,6 +111,7 @@ button, input[type="submit"], .btn {
     grid-column-gap: 8px;
     justify-content: stretch;
     align-items: stretch;
+    grid-template-rows: calc(100vh - 16px);
 
     .left {
         grid-row: 1;
